--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,19 @@ dependencies:
   image_picker: ^0.8.7+3
   dropdown_button2: ^2.0.0
   firebase_core: ^2.9.0
-  cloud_firestore: ^4.0.0
+  cloud_firestore: ^4.8.0
   firebase_storage: ^11.1.1
+  shared_preferences: ^2.1.1
+  flutter_local_notifications: ^14.0.0+1
+  geolocator: ^9.0.0
+  table_calendar: ^3.0.3
+  file_picker: ^5.2.11
+  timezone: ^0.9.2
+  sqflite: ^2.2.8+1
+  path_provider: ^2.0.14
+  google_maps_flutter: any
+  location: ^4.0.0
+  firebase_database: ^10.1.2
 
   path: ^1.8.0
   firebase_auth: ^4.3.0
