--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   google_maps_flutter: any
   location: ^4.0.0
   firebase_database: ^10.1.2
-
+  carousel_slider: ^4.2.1
   path: ^1.8.0
   firebase_auth: ^4.3.0
   flutter_rating_bar: ^4.0.1
