--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,8 @@ dependencies:
   path: ^1.8.0
   firebase_auth: ^4.3.0
   flutter_rating_bar: ^4.0.1
-
+  full_screen_image: ^2.0.0
   awesome_dialog: ^3.0.2
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
